# scdlang-vscode

./: .dockerignore  .editorconfig  .eslintrc.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  maskfile.md  package.json  pnpm-lock.yaml  vsc-extension-quickstart.md
.github/workflows/: main.yml
docker/: atom.dockerfile  dhall.dockerfile  sublime.dockerfile  syntect.dockerfile
examples/: one-liner.scl
scripts/: automate-sublime.sh  dhall-encode.sh  dhall2yaml.sh  json2plist.js  print.rs  print.sh  syntect.rs  yaml2plist.js
syntaxes/: Comment.dhall  Prelude.dhall  Scdlang.YAML-tmLanguage  Scdlang.dhall  Scdlang.sublime-syntax.dhall  Scdlang.tmLanguage.dhall  Syntax.dhall  Transition.dhall
syntaxes/rules/: Indentation Rules - Comments.YAML-tmPreferences  Indentation Rules.YAML-tmPreferences
