[package]
name = "scdlang-syntect"
version = "0.1.0"
authors = ["Fahmi Akbar Wildana <f.a.wildana@gmail.com>"]
edition = "2018"

[dev-dependencies.syntect]
version = "3"
features = ["metadata"]

[[example]]
name = "print"
path = "scripts/print.rs"

[[example]]
name = "syntect"
path = "scripts/syntect.rs"